--- a/brownstone/templates/index.html
+++ b/brownstone/templates/index.html
@@ -19,7 +19,7 @@
 					</div>
 			        {% if loop.length  > 1 %}	
 			                <div class="post">
-			                        <h2 class="title">Autres articles</h2>
+			                        <h2 class="title">Past articles</h2>
 			                </div>
 			        {% endif %}
 			    {% else %} 
