--- a/brownstone/templates/index.html
+++ b/brownstone/templates/index.html
@@ -7,7 +7,7 @@
 				<div id="content">
 					<div class="post">
 						<h2 class="title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
-						<p class="meta"><span class="date"> the {{ article.date.locale_date }} </span><span class="posted">by <a href="#">{{ article.author }}</a></span><span>&nbsp; | Category : <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a></span></p>
+						<p class="meta"><span class="date"> {{ article.date.locale_date }} </span><span class="posted">by <a href="#">{{ article.author }}</a></span><span>&nbsp; | Category : <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a></span></p>
 					<p class="meta">Tags : {% for tag in article.tags %}
 <span><a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a> / </span>
 {% endfor %}</p>
